# finance-purple-agent

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  send_query.sh
.github/workflows/: publish.yml
src/: agent.py  config.py  executor.py  server.py  tools.py
tests/: __init__.py  conftest.py  test_agent_card.py  test_message_send.py  test_tasks.py
